Task 1/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system
---
apiVersion: v1
kind: Namespace
metadata:
  name: application
